--- a/assignment_pandas.ipynb
+++ b/assignment_pandas.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        "4             0             0              40           Cuba  <=50K  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,22 +216,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "32561"
+       "Male      21790\n",
+       "Female    10771\n",
+       "Name: sex, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data[\"sex\"].count()"
+    "data[\"sex\"].value_counts()"
    ]
   },
   {
@@ -392,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -409,8 +411,8 @@
     "maried_male = data[(data[\"marital-status\"].str.contains(\"Married\")) & (data[\"sex\"] == \"Male\")]\n",
     "single_male = data[(~data[\"marital-status\"].str.contains(\"Married\")) & (data[\"sex\"] == \"Male\")]\n",
     "\n",
-    "maried_male_size = len(maried_male[maried_male.salary == \">50K\"])\n",
-    "single_male_size = len(single_male[single_male.salary == \">50K\"])\n",
+    "maried_male_size = (maried_male[maried_male.salary == \">50K\"]).count()[0]\n",
+    "single_male_size = (single_male[single_male.salary == \">50K\"]).count()[0]\n",
     "\n",
     "print(maried_male_size)\n",
     "print(single_male_size)\n",
@@ -430,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -445,9 +447,9 @@
    ],
    "source": [
     "max_duration = data['hours-per-week'].max()\n",
-    "people_max_duration = len(data[data['hours-per-week'] == max_duration])\n",
-    "rich_people_max_duration = len(data[(data['hours-per-week'] == max_duration) \n",
-    "                                    & (data['salary'] == \">50K\")]) * 100 / people_max_duration\n",
+    "people_max_duration = (data[data['hours-per-week'] == max_duration]).count()[0]\n",
+    "rich_people_max_duration = (data[(data['hours-per-week'] == max_duration)\n",
+    "                                    & (data['salary'] == \">50K\")]).count()[0] * 100 / people_max_duration\n",
     "print(f\"Максимальное число часов: {max_duration}\")\n",
     "print(f\"Люди работающие такое количество часов: {people_max_duration}\")\n",
     "print(f\"Процент людей работающие такое количество часов и зарабатывающих много: {rich_people_max_duration}\")"
@@ -782,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -922,48 +924,188 @@
        "      <td>&lt;=50K</td>\n",
        "      <td>young</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32556</th>\n",
+       "      <td>27</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>257302</td>\n",
+       "      <td>Assoc-acdm</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Tech-support</td>\n",
+       "      <td>Wife</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>38</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "      <td>young</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32557</th>\n",
+       "      <td>40</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>154374</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Machine-op-inspct</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&gt;50K</td>\n",
+       "      <td>adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32558</th>\n",
+       "      <td>58</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>151910</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Widowed</td>\n",
+       "      <td>Adm-clerical</td>\n",
+       "      <td>Unmarried</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "      <td>adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32559</th>\n",
+       "      <td>22</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>201490</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Never-married</td>\n",
+       "      <td>Adm-clerical</td>\n",
+       "      <td>Own-child</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "      <td>young</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32560</th>\n",
+       "      <td>52</td>\n",
+       "      <td>Self-emp-inc</td>\n",
+       "      <td>287927</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Exec-managerial</td>\n",
+       "      <td>Wife</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>15024</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&gt;50K</td>\n",
+       "      <td>adult</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>32561 rows × 16 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   age         workclass  fnlwgt  education  education-num  \\\n",
-       "0   39         State-gov   77516  Bachelors             13   \n",
-       "1   50  Self-emp-not-inc   83311  Bachelors             13   \n",
-       "2   38           Private  215646    HS-grad              9   \n",
-       "3   53           Private  234721       11th              7   \n",
-       "4   28           Private  338409  Bachelors             13   \n",
+       "       age         workclass  fnlwgt   education  education-num  \\\n",
+       "0       39         State-gov   77516   Bachelors             13   \n",
+       "1       50  Self-emp-not-inc   83311   Bachelors             13   \n",
+       "2       38           Private  215646     HS-grad              9   \n",
+       "3       53           Private  234721        11th              7   \n",
+       "4       28           Private  338409   Bachelors             13   \n",
+       "...    ...               ...     ...         ...            ...   \n",
+       "32556   27           Private  257302  Assoc-acdm             12   \n",
+       "32557   40           Private  154374     HS-grad              9   \n",
+       "32558   58           Private  151910     HS-grad              9   \n",
+       "32559   22           Private  201490     HS-grad              9   \n",
+       "32560   52      Self-emp-inc  287927     HS-grad              9   \n",
        "\n",
-       "       marital-status         occupation   relationship   race     sex  \\\n",
-       "0       Never-married       Adm-clerical  Not-in-family  White    Male   \n",
-       "1  Married-civ-spouse    Exec-managerial        Husband  White    Male   \n",
-       "2            Divorced  Handlers-cleaners  Not-in-family  White    Male   \n",
-       "3  Married-civ-spouse  Handlers-cleaners        Husband  Black    Male   \n",
-       "4  Married-civ-spouse     Prof-specialty           Wife  Black  Female   \n",
+       "           marital-status         occupation   relationship   race     sex  \\\n",
+       "0           Never-married       Adm-clerical  Not-in-family  White    Male   \n",
+       "1      Married-civ-spouse    Exec-managerial        Husband  White    Male   \n",
+       "2                Divorced  Handlers-cleaners  Not-in-family  White    Male   \n",
+       "3      Married-civ-spouse  Handlers-cleaners        Husband  Black    Male   \n",
+       "4      Married-civ-spouse     Prof-specialty           Wife  Black  Female   \n",
+       "...                   ...                ...            ...    ...     ...   \n",
+       "32556  Married-civ-spouse       Tech-support           Wife  White  Female   \n",
+       "32557  Married-civ-spouse  Machine-op-inspct        Husband  White    Male   \n",
+       "32558             Widowed       Adm-clerical      Unmarried  White  Female   \n",
+       "32559       Never-married       Adm-clerical      Own-child  White    Male   \n",
+       "32560  Married-civ-spouse    Exec-managerial           Wife  White  Female   \n",
        "\n",
-       "   capital-gain  capital-loss  hours-per-week native-country salary AgeGroup  \n",
-       "0          2174             0              40  United-States  <=50K    adult  \n",
-       "1             0             0              13  United-States  <=50K    adult  \n",
-       "2             0             0              40  United-States  <=50K    adult  \n",
-       "3             0             0              40  United-States  <=50K    adult  \n",
-       "4             0             0              40           Cuba  <=50K    young  "
+       "       capital-gain  capital-loss  hours-per-week native-country salary  \\\n",
+       "0              2174             0              40  United-States  <=50K   \n",
+       "1                 0             0              13  United-States  <=50K   \n",
+       "2                 0             0              40  United-States  <=50K   \n",
+       "3                 0             0              40  United-States  <=50K   \n",
+       "4                 0             0              40           Cuba  <=50K   \n",
+       "...             ...           ...             ...            ...    ...   \n",
+       "32556             0             0              38  United-States  <=50K   \n",
+       "32557             0             0              40  United-States   >50K   \n",
+       "32558             0             0              40  United-States  <=50K   \n",
+       "32559             0             0              20  United-States  <=50K   \n",
+       "32560         15024             0              40  United-States   >50K   \n",
+       "\n",
+       "      AgeGroup  \n",
+       "0        adult  \n",
+       "1        adult  \n",
+       "2        adult  \n",
+       "3        adult  \n",
+       "4        young  \n",
+       "...        ...  \n",
+       "32556    young  \n",
+       "32557    adult  \n",
+       "32558    adult  \n",
+       "32559    young  \n",
+       "32560    adult  \n",
+       "\n",
+       "[32561 rows x 16 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def group_by_age(x):\n",
-    "    if (x >= 16) & (x <35):\n",
-    "        return 'young'\n",
-    "    elif (x >= 35) & (x <70):\n",
-    "        return 'adult'\n",
-    "    elif (x >= 70) & (x <=100):\n",
-    "        return 'retiree'\n",
-    "        \n",
-    "data[\"AgeGroup\"] = data.apply(lambda x: group_by_age(x['age']), axis =  1)\n",
+    "data[\"AgeGroup\"] = pd.cut(data[\"age\"], [16, 35, 100, np.inf], labels=['young', 'adult', 'retiree'])\n",
     "data.head()"
    ]
   },
@@ -1016,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1140,18 +1282,15 @@
        "32316  Armed-Forces   23               8"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def filter_func(data):\n",
-    "    return d.filter(lambda x: (x['age'].mean() <= 40) & (x['hours-per-week'] > 5).all())\n",
-    "\n",
     "d = data[['occupation','age', 'hours-per-week']].groupby('occupation')\n",
     "print(d['occupation'].count())\n",
-    "filter_func(d)"
+    "d.filter(lambda x: (x['age'].mean() <= 40) & (x['hours-per-week'] > 5).all())"
    ]
   },
   {
