--- a/assignment_pandas.ipynb
+++ b/assignment_pandas.ipynb
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -281,13 +281,13 @@
        "89.5857006848684"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(data[data['native-country'] == 'United-States']) * 100 / len(data['native-country'])"
+    "(data[data['native-country'] == 'United-States']).count()[0] * 100 / (data['native-country']).count()"
    ]
   },
   {
